# bb-imager-rs

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  Cross.toml  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  E2E_TESTING_SUMMARY.md  Makefile  PACKAGING.adoc  PACKAGING.md  README.md  antora-playbook-local.yml  config.json  deny.toml  justfile  snapcraft.cli.yaml  snapcraft.gui.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: coverage.yml  e2e-tests.yml  e2e.yml  pr.yml  release.yml  rust.yml  static.yml
assets/boards/: Template.psd
assets/os/: template.psd
bb-bmap-parser/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bb-bmap-parser/.github/workflows/: ci.yml
bb-bmap-parser/src/: bmap.rs  lib.rs  xml.rs
bb-bmap-parser/tests/: builder.rs  parse.rs
bb-config/: Cargo.toml  README.md
bb-config/src/: config.rs  lib.rs
bb-config/tests/: config.rs
bb-downloader/: Cargo.toml  README.md
bb-downloader/src/: helpers.rs  lib.rs
bb-downloader/tests/: stream.rs  test.rs
bb-drivelist/: Cargo.toml  README.md
bb-drivelist/src/: lib.rs  main.rs
bb-drivelist/src/pal/: linux.rs  macos.rs  mod.rs  windows.rs
bb-drivelist/tests/: run.rs
bb-flasher/: Cargo.toml  README.md
bb-flasher-bcf/: Cargo.toml  README.md
bb-flasher-bcf/src/: cc1352p7.rs  helpers.rs  lib.rs  msp430.rs
bb-flasher-dfu/: Cargo.toml
bb-flasher-dfu/src/: flashing.rs  helpers.rs  lib.rs
bb-flasher-mspm0/: Cargo.toml  README.md
bb-flasher-mspm0/examples/: flash_i2c.rs
bb-flasher-mspm0/src/: bsl.rs  helpers.rs  i2c.rs  lib.rs  mock_bsl.rs  uart.rs
bb-flasher-mspm0/tests/: basic.rs
bb-flasher-pb2-mspm0/: Cargo.toml  README.md
bb-flasher-pb2-mspm0/src/: lib.rs
bb-flasher-pb2-mspm0/tests/: basic.rs
bb-flasher-sd/: Cargo.toml  README.md
bb-flasher-sd/src/: bootfs_update.rs  customization.rs  flashing.rs  helpers.rs  lib.rs  mock_sd.rs  update_boot.rs
bb-flasher-sd/src/flashing/: mod.rs  tests.rs
bb-flasher-sd/src/pal/: linux.rs  macos.rs  mod.rs  windows.rs
bb-flasher-sd/tests/: bootfs_update.rs  customize.rs  flashing.rs
bb-flasher/src/: common.rs  img.rs  lib.rs
bb-flasher/src/flasher/: dfu.rs  mod.rs  sd.rs
bb-flasher/src/flasher/bcf/: cc1352p7.rs  mod.rs  msp430.rs
bb-flasher/src/flasher/mspm0/: mod.rs
bb-flasher/src/flasher/pb2/: mod.rs
bb-flasher/src/flasher/pb2/mspm0/: dbus.rs  mod.rs  raw.rs
bb-flasher/src/flasher/sd/: cloud_init.rs  mod.rs
bb-flasher/src/img/: mod.rs  test.rs
bb-flasher/tests/: e2e_common.rs  e2e_sd.rs  image.rs  sd.rs
bb-helper/: Cargo.toml  README.md
bb-helper/src/: cancel.rs  file_stream.rs  lib.rs  mock_sd.rs  reader_progress.rs  resolvable.rs
bb-helper/tests/: cancel.rs  file_stream.rs  reader_progress.rs
bb-iced-widgets/: Cargo.toml
bb-iced-widgets/src/: cached_icon.rs  circle_bar.rs  icon.rs  lib.rs  progress_circle.rs
bb-imager/: Cargo.toml
bb-imager-cli/: Cargo.toml  Makefile  build.rs  justfile
bb-imager-cli/src/: cli.rs  helpers.rs  lib.rs  main.rs
bb-imager-cli/tests/: commands.rs  flash_sd.rs
bb-imager-flasher-pb2-mspm0/: Cargo.toml
bb-imager-flasher-pb2-mspm0/src/: lib.rs
bb-imager-gui/: Cargo.toml  Makefile  Package.appxmanifest  build.rs  justfile
bb-imager-gui/migrations/: 20260316134019_init.sql
bb-imager-gui/src/: constants.rs  db.rs  helpers.rs  main.rs  message.rs  pages.rs  persistance.rs  state.rs  tests.rs  updater.rs
bb-imager-gui/src/db/: mod.rs  tests.rs
bb-imager-gui/src/pages/: board_selection.rs  configuration.rs  destination_selection.rs  flash.rs  home.rs  image_selection.rs  mod.rs
bb-imager-gui/src/ui/: app_info.rs  board_selection.rs  configuration.rs  destination_selection.rs  flash.rs  flash_cancel.rs  flash_fail.rs  flash_finish.rs  flash_success.rs  helpers.rs  home.rs  image_selection.rs  mod.rs  review.rs
bb-imager-service/: Cargo.toml  Makefile  README.md  justfile
bb-imager-service/assets/: dbus-org.beagleboard.ImagingService.service  org.beagleboard.ImagingService.conf  org.beagleboard.ImagingService.policy  org.beagleboard.ImagingService.service
bb-imager-service/src/: main.rs
bb-imager/src/: bcf.rs  common.rs  config.rs  download.rs  error.rs  img.rs  lib.rs  sd.rs  util.rs
bb-imager/src/config/: compact.rs  mod.rs
bb-imager/src/flasher/: bcf.rs  mod.rs  msp430.rs  pb2_mspm0.rs  sd.rs
bb-imager/src/flasher/pb2_mspm0/: dbus.rs  mod.rs  raw.rs
bb-imager/src/pal/: linux.rs  macos.rs  mod.rs  windows.rs
cli/: Cargo.toml  Makefile
cli/src/: cli.rs  lib.rs  main.rs
containers/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.armv7-unknown-linux-gnueabihf
docs/: E2E_TESTING.md  E2E_TESTING_GUIDE.md  E2E_TESTING_QUICK_REFERENCE.md  README.adoc  antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/: 10-beagle.rules
docs/modules/ROOT/pages/: contributing.adoc  index.adoc  install-gui.adoc  packaging.adoc
e2e-tests/: Cargo.toml  README.md  run_platform_tests.sh
e2e-tests/tests/e2e/: bcf_flash.rs  common.rs  dfu_flash.rs  sd_flash.rs
gui/: BeagleBoardImager.desktop  Cargo.toml  Makefile  build.rs  gui-manifest.rc  gui.exe.manifest
gui/assets/icons/: icon.icns
gui/assets/packaging/macos/: Info.plist
gui/src/: constants.rs  helpers.rs  main.rs
gui/src/pages/: board_selection.rs  configuration.rs  destination_selection.rs  flash.rs  home.rs  image_selection.rs  mod.rs
iced-loading/: Cargo.toml
iced-loading/src/: circular.rs  linear.rs
rs-drivelist/: Cargo.toml
rs-drivelist/src/: device.rs
sample/src/: main.rs
scripts/: checks.just  make_help.py  packaging.just  release.just  release.mk  setup.just
src/: device.rs  linux.rs  main.rs
src/pal/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: e2e.rs
tests/e2e/: bcf_flash.rs  common.rs  dfu_flash.rs  mod.rs  sd.rs  sd_flash.rs
website/: .env  index.html  package-lock.json  package.json  vite.config.js
website/src/: main.ts  style.css  style.scss
xtask/: Cargo.toml
xtask/src/: main.rs
