[package]
name = "bb-drivelist"
version = "0.3.1"
authors = ["Mazter Irwan <ir1keren@gmail.com>", "Ayush Singh <ayush@beagleboard.org>"]
edition = "2024"
description = "This is basically a Rust implementation of [Balena's drivelist](https://github.com/balena-io-modules/drivelist)"
keywords = ["drivelist", "balena", "drive", "list", "filesystem"]
repository = "https://github.com/Ayush1325/bb-drivelist"
license = "MIT OR Apache-2.0"
categories = ["api-bindings","filesystem","os::windows-apis","os::linux-apis","os::macos-apis"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming"] }

[target.'cfg(target_os = "macos")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-disk-arbitration = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
