[workspace]
resolver = "2"

members = [
	"bb-flasher",
	"bb-imager-cli",
	"bb-flasher-pb2-mspm0",
	"bb-imager-gui",
	"xtask",
	"bb-flasher-bcf",
	"bb-flasher-sd",
	"bb-downloader",
	"bb-config",
	"bb-helper",
	"bb-flasher-dfu",
        "bb-drivelist", 
        "bb-flasher-mspm0",
        "bb-bmap-parser"
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.0.20"
edition = "2024"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
repository = "https://github.com/beagleboard/bb-imager-rs"
license = "MIT"
