[package]
name = "bb-config"
version = "0.1.0"
description = "A library providing abstractions for parsing and generating BeagleBoard.org disros.json"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["beagle"]
categories = ["config", "data-structures", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
url = { version = "2.5", default-features = false, features = ["serde"] }
const-hex = { version = "1.17", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
