[package]
name = "bb-downloader"
version = "0.1.0"
description = "A simple async downloader for applications"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["downloader", "beagle"]
categories = ["Asynchronous", "filesystem", "Caching", "Network programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
sha2 = "0.10"
futures = "0.3"
tempfile = "3.17"
tracing = "0.1"
serde = { version = "1.0", optional = true }
tokio = { version = "1.43", default-features = false, features = ["fs"] }
const-hex = "1.14"

[features]
default = []
json = ["reqwest/json", "dep:serde"]

[dev-dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
