[package]
name = "bb-downloader"
version = "0.2.0"
description = "A simple async downloader for applications"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["downloader", "beagle"]
categories = ["asynchronous", "filesystem", "caching", "network-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
futures = "0.3"
tracing = "0.1"
serde = { version = "1.0", optional = true }
tokio = { version = "1.49", default-features = false, features = ["fs"] }
const-hex = "1.17"
tempfile = "3.24"
bb-helper = { path = "../bb-helper", features = ["file_stream"] }

[features]
default = []
json = ["reqwest/json", "dep:serde"]

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[package.metadata.docs.rs]
all-features = true
