[package]
name = "bb-flasher-bcf"
version = "0.1.0"
description = "A library to flash BeagleConnect Freedom"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["beagleconnect-freedom", "flasher", "beagle"]

[dependencies]
crc32fast = "1.4.2"
futures = "0.3.31"
serialport = "4.7.0"
thiserror = "2.0.12"
tracing = "0.1.41"
