[package]
name = "bb-flasher-bcf"
version = "1.0.0"
description = "A library to flash BeagleConnect Freedom"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["beagleconnect", "flasher", "beagle"]
categories = ["development-tools", "embedded", "hardware-support"]

[lib]

[dependencies]
crc32fast = "1.4"
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
bin_file = "0.1"
serialport = { version = "4.7", optional = true, default-features = false }
hidapi = { version = "2.6", optional = true }

[features]
default = ["cc1352p7"]
cc1352p7 = ["dep:serialport"]
msp430 = ["dep:hidapi"]

[package.metadata.docs.rs]
all-features = true
