[package]
name = "bb-flasher-bcf"
version = "1.0.2"
description = "A library to flash BeagleConnect Freedom"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["beagleconnect", "flasher", "beagle"]
categories = ["development-tools", "embedded", "hardware-support"]

[dependencies]
crc-fast = "1.10"
thiserror = "2.0"
tracing = "0.1"
bin_file = "0.2"
serialport = { version = "4.7", optional = true, default-features = false }
hidapi = { version = "2.6", optional = true, default-features = false }
bb-helper = { path = "../bb-helper", features = ["cancel"] }

[features]
default = ["cc1352p7"]
cc1352p7 = ["dep:serialport"]
msp430 = ["dep:hidapi"]
static = ["hidapi?/linux-static-hidraw"]
shared_hidraw = ["hidapi?/linux-shared-hidraw"]

[package.metadata.docs.rs]
all-features = true
