[package]
name = "bb-flasher-dfu"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dfu-libusb = "0.5"
rusb = "0.9"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread"] }
tokio-util = { version = "0.7" }
thiserror = "2.0"
