[package]
name = "bb-flasher-dfu"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dfu-libusb = "0.6"
rusb = "0.9"
thiserror = "2.0"
bb-helper = { path = "../bb-helper", features = ["cancel", "reader_progress"] }
