[package]
name = "bb-flasher-mspm0"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serialport = { version = "4.7", default-features = false, optional = true }
thiserror = "2.0"
tracing = "0.1"
zerocopy = { version = "0.8", features = ["std", "derive"] }
bin_file = "0.2"
crc-fast = "1.10"
bb-helper = { path = "../bb-helper", features = ["cancel"] }

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = { version = "0.6", optional = true }
gpiocdev = "0.8"
nix = { version = "0.31", features = ["fs"], optional = true }

[features]
# Since uart is cross-platform, can be enabled by default.
default = ["uart"]
uart = ["serialport"]
i2c = ["i2cdev", "nix"]
