[package]
name = "bb-flasher-pb2-mspm0"
version = "0.1.0"
description = "A library to flash MSPM0 co-processor in PocketBeagle 2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["pocketbeagle", "mspm0", "flasher", "beagle"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "sync"] }
tracing = "0.1"
zvariant = { version = "5.8", optional = true }

[features]
serde = ["dep:serde"]
zvariant = ["dep:zvariant"]
