[package]
name = "bb-flasher-sd"
version = "1.0.0"
description = "A library to flash OS images to SD Card"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["flasher", "beagle", "sd-card"]
categories = ["development-tools", "embedded", "filesystem", "os"]

[dependencies]
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
bb-drivelist = "0.3"
fatfs = "0.3"
fscommon = "0.1"
mbrman = "0.6"
gpt = "4.1"
bb-bmap-parser = "0.1"
tokio = { version = "1.47", default-features = false, features = ["rt-multi-thread"] }
tokio-util = { version = "0.7" }
bb-helper = { path = "../bb-helper", features = ["resolvable"] }

[target.'cfg(target_os = "linux")'.dependencies]
udisks2 = { version = "0.3", optional = true }
libc = "0.2"
tokio = { version = "1.47", default-features = false, features = ["rt-multi-thread", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System", "Win32_System_IO", "Win32_System_Ioctl"] }
tokio = { version = "1.47", default-features = false, features = ["rt-multi-thread", "process"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3.3", optional = true }
nix = { version = "0.30", features = ["socket", "uio"], optional = true }

[features]
macos_authopen = ["dep:security-framework", "dep:nix"]
udev = ["dep:udisks2"]
