[package]
name = "bb-flasher-sd"
version = "2.0.1"
description = "A library to flash OS images to SD Card"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["flasher", "beagle", "sd-card"]
categories = ["development-tools", "embedded", "filesystem", "os"]

[dependencies]
thiserror = "2.0"
tracing = "0.1"
bb-drivelist = { path = "../bb-drivelist", version = "1.0" }
fatfs = "0.3"
fscommon = "0.1"
mbrman = "0.6"
gpt = "4.1"
bb-bmap-parser = { version = "0.1", path = "../bb-bmap-parser" }
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "fs"] }
tokio-util = { version = "0.7" }
anyhow = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
udisks2 = { version = "0.3", optional = true }
libc = "0.2"
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System", "Win32_System_IO", "Win32_System_Ioctl"] }
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "process", "io-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3.7", optional = true }
nix = { version = "0.31", features = ["socket", "uio"], optional = true }

[features]
macos_authopen = ["dep:security-framework", "dep:nix"]
udev = ["dep:udisks2"]
