[package]
name = "bb-flasher"
description = "Library providing flashing capabilities for BeagleBoard.org boards"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["beagle", "flasher"]
categories = ["development-tools", "embedded", "hardware-support"]

[dependencies]
liblzma = { version = "0.4", features = ["parallel"] }
serde = { version = "1.0", features = ["derive"], optional = true }
yaml_serde = { version = "0.10", optional = true }
thiserror = { version = "2.0" }
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "sync", "net", "time"] }
tracing = "0.1"
bb-flasher-pb2-mspm0 = { path = "../bb-flasher-pb2-mspm0", optional = true }
bb-flasher-bcf = { path = "../bb-flasher-bcf", optional = true }
bb-flasher-sd = { path = "../bb-flasher-sd", optional = true }
bin_file = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["rt"] }
bb-helper = { path = "../bb-helper", features = ["file_stream", "reader_progress"] }
rc-zip-sync = "4.4"
bb-flasher-dfu = { path = "../bb-flasher-dfu", optional = true }
anyhow = "1.0"
bb-flasher-mspm0 = { path = "../bb-flasher-mspm0", optional = true }
futures = "0.3"
tar = "0.4"

[dev-dependencies]
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "sync", "net", "time", "macros"] }
tempfile = "3.27"
zip = "8.6"

[features]
default = ["sd"]
serde = ["dep:serde"]
sd = ["bb-flasher-sd", "serde", "dep:yaml_serde"]
sd_linux_udev = ["bb-flasher-sd/udev"]
sd_macos_authopen = ["bb-flasher-sd/macos_authopen"]
bcf = ["bb-flasher-bcf/cc1352p7"]
bcf_msp430 = ["bb-flasher-bcf/msp430"]
pb2_mspm0 = ["bb-flasher-pb2-mspm0", "dep:bin_file"]
dfu = ["bb-flasher-dfu"]
static = ["liblzma/static", "static_hidraw"]
static_hidraw = ["bb-flasher-bcf?/static"]
shared_hidraw = ["bb-flasher-bcf?/shared_hidraw"]
mspm0_uart = ["bb-flasher-mspm0/uart"]
mspm0_i2c = ["bb-flasher-mspm0/i2c", "dep:nix"]

[package.metadata.docs.rs]
all-features = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["fs"], optional = true }
