[package]
name = "bb-helper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tempfile = "3.27"
tokio = { version = "1.52", default-features = false, optional = true }
fatfs = { version = "0.3", optional = true }
fscommon = { version = "0.1", optional = true }
mbrman = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

[features]
file_stream = ["tokio/fs", "tokio/io-util"]
reader_progress = []
cancel = []
mock_sd = ["cancel", "dep:fatfs", "dep:fscommon", "dep:mbrman"]
