[package]
name = "bb-helper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tempfile = { version = "3.27", optional = true }
tokio = { version = "1.52", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

[features]
file_stream = ["tokio/fs", "tokio/io-util", "dep:tempfile"]
reader_progress = []
cancel = []
