[package]
name = "bb-iced-widgets"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.14", features = ["advanced", "canvas", "image", "svg"] }
image = "0.25"
iced_aw = { version = "0.14.1", default-features = false, features = ["spinner"] }
