[package]
name = "bb-imager-cli"
description = "A streamlined tool for creating, flashing, and managing OS images for BeagleBoard devices."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bb-flasher = { path = "../bb-flasher" }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
indicatif = "0.18"
console = "0.16"
url = "2.5.4"
const-hex = "1.17"
clap_complete = "4.5"
futures = "0.3"
bb-helper = { path = "../bb-helper", features = ["resolvable"] }
anyhow = "1.0"

[features]
default = []
pb2_mspm0 = [ "bb-flasher/pb2_mspm0" ]
bcf_cc1352p7 = ["bb-flasher/bcf"]
bcf_msp430 = ["bb-flasher/bcf_msp430"]
dfu = ["bb-flasher/dfu"]

[package.metadata.packager]
category = "DeveloperTool"
out_dir = "dist"

[package.metadata.packager.linux]
generate_desktop_entry = false

[package.metadata.packager.deb.files]
"dist/.target/man" = "/usr/share/man/man1"
"dist/.target/shell-comp/_bb-imager-cli" = "/usr/share/zsh/site-functions/_bb-imager-cli"
"dist/.target/shell-comp/bb-imager-cli.bash" = "/usr/share/bash-completion/bb-imager-cli.bash"

[package.metadata.packager.pacman.files]
"dist/.target/man" = "/usr/share/man/man1"
"dist/.target/shell-comp/_bb-imager-cli" = "/usr/share/zsh/site-functions/_bb-imager-cli"
"dist/.target/shell-comp/bb-imager-cli.bash" = "/usr/share/bash-completion/bb-imager-cli.bash"
