[package]
name = "bb-imager-cli"
description = "A streamlined tool for creating, flashing, and managing OS images for BeagleBoard devices."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bb-flasher = { path = "../bb-flasher" }
indicatif = "0.18"
console = "0.16"
const-hex = "1.19"
clap_complete = "4.6"
anyhow = "1.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"

[features]
default = ["static-hidraw"]
pb2_mspm0 = [ "bb-flasher/pb2_mspm0" ]
bcf_cc1352p7 = ["bb-flasher/bcf"]
bcf_msp430 = ["bb-flasher/bcf_msp430"]
dfu = ["bb-flasher/dfu"]
zepto_uart = ["bb-flasher/mspm0_uart"]
zepto_i2c = ["bb-flasher/mspm0_i2c"]
# Normally, I would enable shared for CLI on Linux by default, but most distros have out of date
# version of dependency.
static-hidraw = ["bb-flasher/static_hidraw"]
shared-hidraw = ["bb-flasher/shared_hidraw"]

[package.metadata.packager]
category = "DeveloperTool"
out_dir = "dist"

[package.metadata.packager.linux]
generate_desktop_entry = false

[package.metadata.packager.deb.files]
"dist/.target/man" = "/usr/share/man/man1"
"dist/.target/shell-comp/_bb-imager-cli" = "/usr/share/zsh/site-functions/_bb-imager-cli"
"dist/.target/shell-comp/bb-imager-cli.bash" = "/usr/share/bash-completion/bb-imager-cli.bash"

[package.metadata.packager.pacman.files]
"dist/.target/man" = "/usr/share/man/man1"
"dist/.target/shell-comp/_bb-imager-cli" = "/usr/share/zsh/site-functions/_bb-imager-cli"
"dist/.target/shell-comp/bb-imager-cli.bash" = "/usr/share/bash-completion/bb-imager-cli.bash"
