[package]
name = "bb-imager-flasher-pb2-mspm0"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.217", optional = true, features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "io-util", "sync"] }

[features]
serde = ["dep:serde"]
