[package]
name = "bb-imager-flasher-pb2-mspm0"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.218", optional = true, features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "io-util", "sync"] }
zvariant = { version = "5.4.0", optional = true }

[features]
serde = ["dep:serde"]
zvariant = ["dep:zvariant"]
