[package]
name = "bb-imager-gui"
description = "The easiest way to install the latest operating system images for your Beagle."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.13.1", features = ["image", "svg", "tokio", "advanced", "lazy"] }
rfd = { version = "0.15.2", default-features = false, features = ["xdg-portal", "tokio"] }
bb-flasher = { path = "../bb-flasher" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
iced_aw = { version = "0.12.0", default-features = false, features = ["badge", "tabs"] }
image = "0.25"
tokio = { version = "1.46", default-features = false, features = ["macros"] }
webbrowser = "1.0.3"
notify-rust = "4.11.5"
url = "2.5.4"
whoami = "1.6"
localzone = "0.3.1"
tokio-stream = "0.1.17"
iced-loading = { path = "../iced-loading" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
directories = "6.0.0"
bb-downloader = { path = "../bb-downloader", features = ["json"] }
bb-config = { path = "../bb-config" }
bb-helper = { path = "../bb-helper" }
tokio-util = { version = "0.7" }

[build-dependencies]
embed-resource = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_linux_udev"] }
ashpd = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_macos_authopen"] }

[features]
pb2_mspm0 = ["bb-flasher/pb2_mspm0_dbus"]
bcf_cc1352p7 = ["bb-flasher/bcf"]
# GUI requires the base board support for any sub soc firmware
bcf_msp430 = ["bb-flasher/bcf_msp430", "bcf_cc1352p7"]

[package.metadata.packager]
icons = ["assets/icons/icon.*"]
category = "DeveloperTool"
identifier = "org.beagleboard.imagingutility"
out_dir = "dist"
product_name = "BeagleBoard Imaging Utility"

[package.metadata.packager.wix]
banner_path = "assets/icons/installer_banner.png"
dialog_image_path = "assets/icons/dialog_image.png"

[package.metadata.packager.deb]
package_name = "bb-imager-gui"
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }

[package.metadata.packager.pacman]
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }
