[package]
name = "bb-imager-gui"
description = "The easiest way to install the latest operating system images for your Beagle."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.14.0", features = ["image", "svg", "tokio", "advanced", "lazy", "canvas"] }
rfd = { version = "0.16.0", default-features = false, features = ["tokio", "file-handle-inner"] }
bb-flasher = { path = "../bb-flasher" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
iced_aw = { version = "0.13.1", default-features = false, features = ["spinner"] }
image = "0.25"
tokio = { version = "1.51", default-features = false, features = ["macros"] }
webbrowser = "1.1.0"
notify-rust = { version = "4.14.0", default-features = false, features = ["z-with-tokio"] }
url = "2.5.4"
whoami = "2.1"
localzone = "0.3.1"
tokio-stream = "0.1.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
directories = "6.0.0"
bb-downloader = { path = "../bb-downloader", default-features = false, features = ["json"] }
bb-config = { path = "../bb-config" }
bb-helper = { path = "../bb-helper", features = ["file_stream"] }
tokio-util = { version = "0.7" }
semver = "1.0.28"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono"] }
tempfile = "3.26"
const-hex = { version = "1.17", features = ["serde"] }

[build-dependencies]
embed-resource = "3.0"

[dev-dependencies]
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_linux_udev"] }
rfd = { version = "0.16.0", default-features = false, features = ["xdg-portal", "tokio", "file-handle-inner"] }
ashpd = { version = "0.13", features = ["notification"] }

[target.'cfg(target_os = "macos")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_macos_authopen"] }

[features]
default = ["static"]
bcf_cc1352p7 = ["bb-flasher/bcf"]
# GUI requires the base board support for any sub soc firmware
bcf_msp430 = ["bb-flasher/bcf_msp430", "bcf_cc1352p7"]
# Handle application updates
updater = []
static = ["sqlx/sqlite", "bb-flasher/static", "bb-downloader/rustls"]
system-deps = ["sqlx/sqlite-unbundled", "bb-downloader/native-tls"]
zepto_uart = ["bb-flasher/mspm0_uart"]
zepto_i2c = ["bb-flasher/mspm0_i2c"]

[package.metadata.packager]
icons = ["assets/icons/icon.*"]
category = "DeveloperTool"
identifier = "org.beagleboard.imagingutility"
out_dir = "dist"
product_name = "BeagleBoard Imaging Utility"

[package.metadata.packager.wix]
banner_path = "assets/icons/installer_banner.png"
dialog_image_path = "assets/icons/dialog_image.png"

[package.metadata.packager.deb]
package_name = "bb-imager-gui"
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }

[package.metadata.packager.pacman]
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }
