[package]
name = "bb-imager-gui"
description = "The easiest way to install the latest operating system images for your Beagle."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.14.0", features = ["image", "svg", "tokio", "advanced", "canvas"] }
rfd = { version = "0.17.2", features = ["file-handle-inner"] }
bb-flasher = { path = "../bb-flasher", features = ["serde", "piped_image"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
iced_aw = { version = "0.14.1", default-features = false, features = ["spinner"] }
image = "0.25"
tokio = { version = "1.52", default-features = false, features = ["macros", "time"] }
webbrowser = "1.2.1"
notify-rust = { version = "4.17.0", default-features = false, features = ["z-with-tokio"], optional = true }
url = "2.5.4"
whoami = "2.1"
iana-time-zone = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
directories = "6.0.0"
bb-downloader = { path = "../bb-downloader", default-features = false, features = ["json"] }
bb-config = { path = "../bb-config" }
bb-helper = { path = "../bb-helper", features = ["file_stream", "cancel"] }
semver = "1.0.28"
anyhow = "1.0"
tempfile = "3.26"
const-hex = { version = "1.19", features = ["serde"] }
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.40", features = ["url", "chrono"] }
chrono = "0.4"
bb-iced-widgets = { path = "../bb-iced-widgets" }

[build-dependencies]
embed-resource = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_linux_udev"] }
ashpd = { version = "0.13", features = ["notification"] }

[target.'cfg(target_os = "macos")'.dependencies]
bb-flasher = { path = "../bb-flasher", features = ["sd_macos_authopen"] }

[features]
default = ["static"]
sd = ["bb-flasher/sd"]
bcf_cc1352p7 = ["bb-flasher/bcf"]
# GUI requires the base board support for any sub soc firmware
bcf_msp430 = ["bb-flasher/bcf_msp430", "bcf_cc1352p7"]
# Handle application updates
updater = []
static = ["rusqlite/bundled", "bb-flasher/static", "bb-downloader/rustls"]
system-deps = ["bb-downloader/native-tls"]
zepto_uart = ["bb-flasher/mspm0_uart"]
zepto_i2c = ["bb-flasher/mspm0_i2c"]
pre-release = []
static-hidraw = ["bb-flasher/static_hidraw"]
shared-hidraw = ["bb-flasher/shared_hidraw"]
notify-rust = ["dep:notify-rust"]

[package.metadata.packager]
icons = ["assets/icons/icon.*"]
category = "DeveloperTool"
identifier = "org.beagleboard.imagingutility"
out_dir = "dist"
product_name = "BeagleBoard Imaging Utility"

[package.metadata.packager.wix]
banner_path = "assets/icons/installer_banner.png"
dialog_image_path = "assets/icons/dialog_image.png"

[package.metadata.packager.deb]
package_name = "bb-imager-gui"
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }

[package.metadata.packager.pacman]
files = { "assets/packages/linux/udev/10-beagle.rules" = "/etc/udev/rules.d/10-beagle.rules" }
