[package]
name = "bb-imager-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.3.0", default-features = false, features = ["tokio"] }
zbus_polkit = "5.0.0"
bb-imager-flasher-pb2-mspm0 = { path = "../bb-imager-flasher-pb2-mspm0" , features = ["serde", "zvariant"] }
serde_json = "1.0.135"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
